Profile section completed.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-Hello World
+<html>
+    <head>
+        <title>Milan Kamilya</title>
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
+    </head>
+    <body>
+        <div id="container">
+            <!-- Left Panel -->
+            <div id="left">
+                <div id="profile-container">
+                    <img src="images/profile.png" id="profile"/>
+                    <div id="title-container">
+                        <label id="title">Milan Kamilya</label>
+                    </div>
+                </div>
+                <!-- <img src="images/profile.png" id="profile"/> -->
+
+                <a href="https://github.com/milankamilya">
+                    <img src="images/github.png" id="github" class="logo"/>
+                </a>
+                <a href="https://stackoverflow.com/users/2666902/milan-kamilya">
+                    <img src="images/stack-overflow.png" id="stackoverflow" class="logo"/>
+                </a>
+                <a href="https://twitter.com/Milan_Kamilya">
+                    <img src="images/twitter.png" id="twitter" class="logo"/>
+                </a>
+            </div>
+            <div id="center">
+                <div id="header">
+                    <label id="heading">Software Developer</label>
+                    <p id="description">
+                        Senior iOS Developer, React Native, Swift 4, Objective C, iPhone, Android, NodeJS, AngularJS
+                    </p>
+                </div>
+                <div id="content-body">
+
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
