header need to be fixed

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 </div>
                 <!-- <img src="images/profile.png" id="profile"/> -->
 
-                <a href="https://github.com/milankamilya">
+                <a href="https://github.com/milankamilya" target="_blank">
                     <img src="images/github.png" id="github" class="logo"/>
                 </a>
-                <a href="https://stackoverflow.com/users/2666902/milan-kamilya">
+                <a href="https://stackoverflow.com/users/2666902/milan-kamilya" target="_blank">
                     <img src="images/stack-overflow.png" id="stackoverflow" class="logo"/>
                 </a>
-                <a href="https://twitter.com/Milan_Kamilya">
+                <a href="https://twitter.com/Milan_Kamilya" target="_blank">
                     <img src="images/twitter.png" id="twitter" class="logo"/>
                 </a>
             </div>
